--- a/index.html
+++ b/index.html
@@ -133,47 +133,61 @@
         <section class="section-team">
           <h2 class="section-title">Наша команда</h2>
           <ul class="section-work work">
-            <li>
-              <img
-                src="./images/ID.jpg"
-                class="img"
-                alt="Игорь Демьяненко"
-                width="270"
-              />
-              <h3 class="section-team-title">Игорь Демьяненко</h3>
-              <p class="section-team-text">Product Designer</p>
+            <li class="card-team">
+              <div class="item">
+                <img
+                  src="./images/ID.jpg"
+                  class="img-team"
+                  alt="Игорь Демьяненко"
+                  width="270"
+                />
+              </div>
+              <div class="item-team">
+                <h3 class="section-team-title">Игорь Демьяненко</h3>
+                <p class="section-team-text">Product Designer</p>
+              </div>
             </li>
-            <li>
-              <div class="img-color">
+            <li class="card-team">
+              <div class="item">
                 <img
                   src="./images/OR.jpg"
-                  class="img"
+                  class="img-team"
                   alt="Ольга Репина"
                   width="270"
                 />
+              </div>
+              <div class="item-team">
                 <h3 class="section-team-title">Ольга Репина</h3>
                 <p class="section-team-text">Frontend Developer</p>
               </div>
             </li>
-            <li>
-              <img
-                src="./images/NT.jpg"
-                class="img"
-                alt="Николай Тарасов"
-                width="270"
-              />
-              <h3 class="section-team-title">Николай Тарасов</h3>
-              <p class="section-team-text">Marketing</p>
+            <li class="card-team">
+              <div class="item">
+                <img
+                  src="./images/NT.jpg"
+                  class="img-team"
+                  alt="Николай Тарасов"
+                  width="270"
+                />
+              </div>
+              <div class="item-team">
+                <h3 class="section-team-title">Николай Тарасов</h3>
+                <p class="section-team-text">Marketing</p>
+              </div>
             </li>
-            <li>
-              <img
-                src="./images/ME.jpg"
-                class="img"
-                alt="Михаил Ермаков"
-                width="270"
-              />
-              <h3 class="section-team-title">Михаил Ермаков</h3>
-              <p class="section-team-text">UI Designer</p>
+            <li class="card-team">
+              <div class="item">
+                <img
+                  src="./images/ME.jpg"
+                  class="img-team"
+                  alt="Михаил Ермаков"
+                  width="270"
+                />
+              </div>
+              <div class="item-team">
+                <h3 class="section-team-title">Михаил Ермаков</h3>
+                <p class="section-team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </section>
@@ -189,7 +203,7 @@
         >
         <address>
           <ul class="footer-address">
-            <li>
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/rYCr92r1BttdTYW5A"
                 class="footer-contact-address"
@@ -198,7 +212,7 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a href="mailto:info@devstudio.com" class="footer-contact-nav-mt"
                 >info@devstudio.com</a
               >
