--- a/portfolio.html
+++ b/portfolio.html
@@ -71,67 +71,136 @@
         </ul>
         <ul class="flex-container">
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img11.jpg" alt="Ноутбук" width="370" />
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img src="./images/img11.jpg" alt="Ноутбук" width="370" />
+                  <div class="card-content">
+                    <h2 class="card-title">Технокряк</h2>
+                    <p class="card-text">Веб-сайт</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img22.jpg" alt="Баскетболисты" width="370" />
-              <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img
+                    src="./images/img22.jpg"
+                    alt="Баскетболисты"
+                    width="370"
+                  />
+                  <div class="card-content">
+                    <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="card-text">Дизайн</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
+
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img33.jpg" alt="Лого ресторану" width="370" />
-              <h2 class="portfolio-title">Ресторан Seafood</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img
+                    src="./images/img33.jpg"
+                    alt="Лого ресторану"
+                    width="370"
+                  />
+                  <div class="card-content">
+                    <h2 class="card-title">Ресторан Seafood</h2>
+                    <p class="card-text">Приложение</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
+
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img44.jpg" alt="Наушники" width="370" />
-              <h2 class="portfolio-title">Проект Prime</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img src="./images/img44.jpg" alt="Наушники" width="370" />
+                  <div class="card-content">
+                    <h2 class="card-title">Проект Prime</h2>
+                    <p class="card-text">Маркетинг</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
+
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img55.jpg" alt="Две коробки" width="370" />
-              <h2 class="portfolio-title">Проект Boxes</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img src="./images/img55.jpg" alt="Две коробки" width="370" />
+                  <div class="card-content">
+                    <h2 class="card-title">Проект Boxes</h2>
+                    <p class="card-text">Приложение</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
+
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img66.jpg" alt="Монитор" width="370" />
-              <h2 class="portfolio-title">Inspiration has no Borders</h2>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img src="./images/img66.jpg" alt="Монитор" width="370" />
+                  <div class="card-content">
+                    <h2 class="card-title">Inspiration has no Borders</h2>
+                    <p class="card-text">Веб-сайт</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
+
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img77.jpg" alt="Книга" width="370" />
-              <h2 class="portfolio-title">Издание Limited Edition</h2>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img src="./images/img77.jpg" alt="Книга" width="370" />
+                  <div class="card-content">
+                    <h2 class="card-title">Издание Limited Edition</h2>
+                    <p class="card-text">Дизайн</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
+
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img88.jpg" alt="Логотип" width="370" />
-              <h2 class="portfolio-title">Проект LAB</h2>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img src="./images/img88.jpg" alt="Логотип" width="370" />
+                  <div class="card-content">
+                    <h2 class="card-title">Проект LAB</h2>
+                    <p class="card-text">Маркетинг</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
+
           <li class="flex-element">
-            <a href="" class="portfolio-link">
-              <img src="./images/img99.jpg" alt="Ноутбук" width="370" />
-              <h2 class="portfolio-title">Growing Business</h2>
-              <p class="portfolio-text">Приложение</p>
-            </a>
+            <article class="card">
+              <div class="card-thumb">
+                <a href="" class="card-link">
+                  <img src="./images/img99.jpg" alt="Ноутбук" width="370" />
+                  <div class="card-content">
+                    <h2 class="card-title">Growing Business</h2>
+                    <p class="card-text">Приложение</p>
+                  </div>
+                </a>
+              </div>
+            </article>
           </li>
         </ul>
       </section>
@@ -146,7 +215,7 @@
         >
         <address>
           <ul class="footer-address">
-            <li>
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/rYCr92r1BttdTYW5A"
                 class="footer-contact-address"
@@ -155,7 +224,7 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a href="mailto:info@devstudio.com" class="footer-contact-nav-mt"
                 >info@devstudio.com</a
               >
