--- a/portfolio.html
+++ b/portfolio.html
@@ -21,20 +21,21 @@
     <!-- Шапка сторінки -->
     <header class="header">
       <!-- Навігація на інші сторінки -->
-      <nav class="nav">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <ul class="site-nav">
-          <li class="item">
-            <a href="./index.html" class="site-nav-link">Студия</a>
-          </li>
-          <li class="item">
-            <a href="./portfolio.html" class="site-nav-сurrent">Портфолио</a>
-          </li>
-          <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
-        </ul>
-
+      <div class="container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>Studio</a
+          >
+          <ul class="site-nav">
+            <li class="item">
+              <a href="./index.html" class="site-nav-link">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="site-nav-сurrent">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
+          </ul>
+        </nav>
         <!-- Контакти -->
         <ul class="contact-nav">
           <li class="item">
@@ -48,7 +49,7 @@
             >
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
 
     <!-- Портфоліо -->
@@ -72,134 +73,135 @@
         <ul class="flex-container">
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img src="./images/img11.jpg" alt="Ноутбук" width="370" />
-                  <div class="card-content">
-                    <h2 class="card-title">Технокряк</h2>
-                    <p class="card-text">Веб-сайт</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Технокряк</h2>
+                  <p class="card-text">Веб-сайт</p>
+                </div>
+              </a>
             </article>
           </li>
+
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img
                     src="./images/img22.jpg"
                     alt="Баскетболисты"
                     width="370"
                   />
-                  <div class="card-content">
-                    <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="card-text">Дизайн</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="card-text">Дизайн</p>
+                </div>
+              </a>
             </article>
           </li>
 
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img
                     src="./images/img33.jpg"
                     alt="Лого ресторану"
                     width="370"
                   />
-                  <div class="card-content">
-                    <h2 class="card-title">Ресторан Seafood</h2>
-                    <p class="card-text">Приложение</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Ресторан Seafood</h2>
+                  <p class="card-text">Приложение</p>
+                </div>
+              </a>
             </article>
           </li>
 
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img src="./images/img44.jpg" alt="Наушники" width="370" />
-                  <div class="card-content">
-                    <h2 class="card-title">Проект Prime</h2>
-                    <p class="card-text">Маркетинг</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Проект Prime</h2>
+                  <p class="card-text">Маркетинг</p>
+                </div>
+              </a>
             </article>
           </li>
 
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img src="./images/img55.jpg" alt="Две коробки" width="370" />
-                  <div class="card-content">
-                    <h2 class="card-title">Проект Boxes</h2>
-                    <p class="card-text">Приложение</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Проект Boxes</h2>
+                  <p class="card-text">Приложение</p>
+                </div>
+              </a>
             </article>
           </li>
 
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img src="./images/img66.jpg" alt="Монитор" width="370" />
-                  <div class="card-content">
-                    <h2 class="card-title">Inspiration has no Borders</h2>
-                    <p class="card-text">Веб-сайт</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Inspiration has no Borders</h2>
+                  <p class="card-text">Веб-сайт</p>
+                </div>
+              </a>
             </article>
           </li>
 
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img src="./images/img77.jpg" alt="Книга" width="370" />
-                  <div class="card-content">
-                    <h2 class="card-title">Издание Limited Edition</h2>
-                    <p class="card-text">Дизайн</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Издание Limited Edition</h2>
+                  <p class="card-text">Дизайн</p>
+                </div>
+              </a>
             </article>
           </li>
 
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img src="./images/img88.jpg" alt="Логотип" width="370" />
-                  <div class="card-content">
-                    <h2 class="card-title">Проект LAB</h2>
-                    <p class="card-text">Маркетинг</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Проект LAB</h2>
+                  <p class="card-text">Маркетинг</p>
+                </div>
+              </a>
             </article>
           </li>
 
           <li class="flex-element">
             <article class="card">
-              <div class="card-thumb">
-                <a href="" class="card-link">
+              <a href="" class="card-link">
+                <div class="card-thumb">
                   <img src="./images/img99.jpg" alt="Ноутбук" width="370" />
-                  <div class="card-content">
-                    <h2 class="card-title">Growing Business</h2>
-                    <p class="card-text">Приложение</p>
-                  </div>
-                </a>
-              </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-title">Growing Business</h2>
+                  <p class="card-text">Приложение</p>
+                </div>
+              </a>
             </article>
           </li>
         </ul>
