--- a/index.html
+++ b/index.html
@@ -21,42 +21,41 @@
     <!-- Шапка сторінки -->
     <header class="header">
       <!-- Навігація на інші сторінки -->
-      <nav class="nav">
-        <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <ul class="site-nav">
+      <div class="container">
+        <nav class="nav">
+          <a href="./index.html" class="logo"
+            ><span class="logo-web">Web</span>Studio</a
+          >
+          <ul class="site-nav">
+            <li class="item">
+              <a href="./index.html" class="site-nav-сurrent">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
+            </li>
+            <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
+          </ul>
+        </nav>
+        <!-- Контакти -->
+        <ul class="contact-nav">
           <li class="item">
-            <a href="./index.html" class="site-nav-сurrent">Студия</a>
+            <a href="mailto:info@devstudio.com" class="contact-nav-mt"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a href="./portfolio.html" class="site-nav-link">Портфолио</a>
+            <a href="tel:+380961111111" class="contact-nav-mt"
+              >+38 096 111 11 11</a
+            >
           </li>
-          <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
         </ul>
-      </nav>
-      <!-- Контакти -->
-      <ul class="contact-nav">
-        <li class="item">
-          <a href="mailto:info@devstudio.com" class="contact-nav-mt"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="item">
-          <a href="tel:+380961111111" class="contact-nav-mt"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main class="section">
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
@@ -174,7 +173,7 @@
                 <p class="section-team-text">Marketing</p>
               </div>
             </li>
-            <li class="card-team">
+            <li class="card-team team">
               <div class="item">
                 <img
                   src="./images/ME.jpg"
