--- a/index.html
+++ b/index.html
@@ -63,28 +63,31 @@
       <section>
         <div class="container">
           <ul class="section-feature">
-            <li>
+            <li class="section-special">
               <h3 class="section-feature-title">Внимание к деталям</h3>
               <p class="section-feature-text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+
+            <li class="section-special">
               <h3 class="section-feature-title">Пунктуальность</h3>
               <p class="section-feature-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+
+            <li class="section-special">
               <h3 class="section-feature-title">Планирование</h3>
               <p class="section-feature-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+
+            <li class="section-special">
               <h3 class="section-feature-title">Современные технологии</h3>
               <p class="section-feature-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -99,7 +102,7 @@
       <section class="s-work">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="section-work work">
-          <li>
+          <li class="section-img">
             <img
               src="./images/img.jpg"
               class="img"
@@ -107,7 +110,7 @@
               width="370"
             />
           </li>
-          <li>
+          <li class="section-img">
             <img
               src="./images/img1.jpg"
               class="img"
@@ -115,7 +118,7 @@
               width="370"
             />
           </li>
-          <li>
+          <li class="section-img">
             <img
               src="./images/img2.jpg"
               class="img"
@@ -127,8 +130,8 @@
       </section>
 
       <!-- Команда -->
-      <div class="section-color">
-        <section class="section-team">
+      <section class="section-color">
+        <div class="section-team">
           <h2 class="section-title">Наша команда</h2>
           <ul class="section-work work">
             <li class="card-team">
@@ -188,8 +191,8 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <!-- Футер -->
@@ -199,8 +202,8 @@
         <a href="./index.html" class="logo-footer"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <address>
-          <ul class="footer-address">
+        <address class="footer-address">
+          <ul>
             <li class="footer-item">
               <a
                 href="https://goo.gl/maps/rYCr92r1BttdTYW5A"
