--- a/portfolio.html
+++ b/portfolio.html
@@ -56,14 +56,16 @@
     <main>
       <section class="portfolio">
         <ul class="button">
-          <li><button type="button" class="portfolio-button">Все</button></li>
-          <li>
+          <li class="mg-r">
+            <button type="button" class="portfolio-button">Все</button>
+          </li>
+          <li class="mg-r">
             <button type="button" class="portfolio-button">Веб-сайты</button>
           </li>
-          <li>
+          <li class="mg-r">
             <button type="button" class="portfolio-button">Приложения</button>
           </li>
-          <li>
+          <li class="mg-r">
             <button type="button" class="portfolio-button">Дизайн</button>
           </li>
           <li>
@@ -215,8 +217,8 @@
         <a href="./index.html" class="logo-footer"
           ><span class="logo-web">Web</span>Studio</a
         >
-        <address>
-          <ul class="footer-address">
+        <address class="footer-address">
+          <ul>
             <li class="footer-item">
               <a
                 href="https://goo.gl/maps/rYCr92r1BttdTYW5A"
