--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       <!-- Особливості -->
       <section>
-        <div class="container">
+        <div class="container features">
           <ul class="section-feature">
             <li class="section-special">
               <h3 class="section-feature-title">Внимание к деталям</h3>
@@ -99,7 +99,7 @@
       </section>
 
       <!-- Заняття -->
-      <section class="s-work">
+      <section class="img-work">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="section-work work">
           <li class="section-img">
@@ -135,13 +135,8 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="section-work work">
             <li class="card-team">
-              <div class="item">
-                <img
-                  src="./images/ID.jpg"
-                  class="img-team"
-                  alt="Игорь Демьяненко"
-                  width="270"
-                />
+              <div class="img-team">
+                <img src="./images/ID.jpg" alt="Игорь Демьяненко" width="270" />
               </div>
               <div class="item-team">
                 <h3 class="section-team-title">Игорь Демьяненко</h3>
@@ -149,13 +144,8 @@
               </div>
             </li>
             <li class="card-team">
-              <div class="item">
-                <img
-                  src="./images/OR.jpg"
-                  class="img-team"
-                  alt="Ольга Репина"
-                  width="270"
-                />
+              <div class="img-team">
+                <img src="./images/OR.jpg" alt="Ольга Репина" width="270" />
               </div>
               <div class="item-team">
                 <h3 class="section-team-title">Ольга Репина</h3>
@@ -163,13 +153,8 @@
               </div>
             </li>
             <li class="card-team">
-              <div class="item">
-                <img
-                  src="./images/NT.jpg"
-                  class="img-team"
-                  alt="Николай Тарасов"
-                  width="270"
-                />
+              <div class="img-team">
+                <img src="./images/NT.jpg" alt="Николай Тарасов" width="270" />
               </div>
               <div class="item-team">
                 <h3 class="section-team-title">Николай Тарасов</h3>
@@ -177,13 +162,8 @@
               </div>
             </li>
             <li class="card-team team">
-              <div class="item">
-                <img
-                  src="./images/ME.jpg"
-                  class="img-team"
-                  alt="Михаил Ермаков"
-                  width="270"
-                />
+              <div class="img-team">
+                <img src="./images/ME.jpg" alt="Михаил Ермаков" width="270" />
               </div>
               <div class="item-team">
                 <h3 class="section-team-title">Михаил Ермаков</h3>
